@@ -2,8 +2,6 @@ package uk.yermak.audiobookconverter.fx;
 
 import javafx.application.Platform;
 import javafx.beans.InvalidationListener;
-import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
@@ -112,16 +110,18 @@ public class OutputController {
 //        String savedPreset = Objects.requireNonNullElse(AppProperties.getProperty("last.preset"), "custom");
 //        Preset lastPreset = presets.stream().filter(preset -> preset.getPresetName().equals(Preset.LAST_USED)).findFirst().get();
 
-        presetBox.getItems().addAll(presets.stream().map(Preset::getName).collect(Collectors.toList()));
+        presetBox.getItems().addAll(presets.stream().map(Preset::getName).toList());
 
         presetBox.getSelectionModel().select(Preset.DEFAULT);
         presetBox.getSelectionModel().selectedItemProperty().addListener((observableValue, oldValue, newValue) -> {
             if (!presetBox.getItems().contains(newValue)) {
                 presetBox.getItems().add(newValue);
                 Preset preset = Preset.copy(newValue, Preset.instance(oldValue));
+                AppSetting.savePreset(preset);
                 AudiobookConverter.getContext().setOutputParameters(preset);
             } else {
                 Preset preset = Preset.instance(newValue);
+                AppSetting.savePreset(preset);
                 AudiobookConverter.getContext().setOutputParameters(preset);
             }
         });
